# analisis_redes_2024

./: README.md  fase_1_proyecto.ipynb  pyproject.toml
data/: Arcos.xlsx  Nodos.xlsx
notebooks/: fase_1_proyecto.ipynb  fase_3_proyecto.R  reporte.html
